# cryorithm

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
cryorithm/: main.py  openai_client.py  openai_client_wrapper.py
cryorithm/cli/: main.py
cryorithm/clients/: kafka.py  openai.py
cryorithm/managers/: config.py  job.py  log.py
cryorithm/sensors/stock/: fundamentals.py
cryorithm_sensor_stock_fundamentals/: config_manager.py  kafka_client.py  llm_client.py  main.py  openai_client.py  sensor.py  stock_sensor.py
helpers/: update_requirements.py
tests/: test_client_openai.py
