[tool.poetry]
name = "cryorithm-sensor-stock-fundamentals"
version = "0.1.0"
description = "Cryorithm™ | Sensor | Stock Fundamentals"
authors = ["Joshua M. Dotson <contact@jmdots.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.38"
openai = "^1.25.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pre-commit = "^3.7.0"
pre-commit-hooks = "^4.6.0"
pytest-coverage = "^0.0"
flake8 = "^7.0.0"

[tool.poetry.scripts]
cryorithm-sensor-stock-fundamentals = "cryorithm_sensor_stock_fundamentals.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
